--- a/portfolio/blastEngineer/index.html
+++ b/portfolio/blastEngineer/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div id="game_div"></div>
+		<script type="text/javascript" src="js/blastEngineer.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
